--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
     "prettier": "^2.8.8",
-    "vite": "^4.3.5"
+    "vite": "^4.3.5",
+    "vite-plugin-pwa": "^0.15.0"
   }
 }
